--- a/public/services.html
+++ b/public/services.html
@@ -156,7 +156,7 @@
 
 <section class="ftco-section bg-light">
   <div class="container">
-   <div class="row justify-content-center" id="service-page">
+   <div class="row justify-content-center  service-center">
  
      <div class="col-md-4 d-flex align-self-stretch">
        <div class="d-block services d-flex justify-content-between">
@@ -300,6 +300,10 @@
     firebase.analytics();
   </script>
   <script src="/app.js"></script>
+      <!-- contentful -->
+ <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+    <!--  javascript -->
+<script src="services.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery-migrate-3.0.1.min.js"></script>
 <script src="js/popper.min.js"></script>
